--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,122 +1,68 @@
 {
   "data": [
     {
-      "id": "R_kgDOJWL0-g",
-      "name": "mdp-diffusion",
-      "createdAt": "2023-04-13T04:18:19Z",
-      "url": "https://github.com/ashutosh1919/mdp-diffusion",
-      "description": "Text-guided image editing by manipulating diffusion path without any training.",
+      "id": "engineering-document-management-system",
+      "name": "Engineering Document Management System",
+      "createdAt": "2023-06-01T00:00:00Z",
+      "url": "https://kinsmengroup.com/",
+      "description": "Developed a robust background processor and job scheduling system using .NET Core Azure Functions and Service Bus, improving document processing efficiency by 35%. Integrated SignalR for real-time notifications and used Fluent UI with React.js for a better user interface.",
       "isFork": false,
       "languages": [
         {
-          "name": "Python",
-          "iconifyClass": "logos-python"
+          "name": ".NET Core",
+          "iconifyClass": "simple-icons:dotnet"
         },
         {
-          "name": "Shell",
-          "iconifyClass": "simple-icons:shell"
+          "name": "React.js",
+          "iconifyClass": "logos-react"
         },
         {
-          "name": "Jupyter Notebook",
-          "iconifyClass": "logos-jupyter"
+          "name": "Azure",
+          "iconifyClass": "logos-azure"
         }
       ]
     },
     {
-      "id": "R_kgDOG_vYHA",
-      "name": "explainable-cnn",
-      "createdAt": "2022-03-13T20:41:33Z",
-      "url": "https://github.com/ashutosh1919/explainable-cnn",
-      "description": "📦 PyTorch based visualization package for generating layer-wise explanations for CNNs.",
+      "id": "revenue-lifecycle-management-system",
+      "name": "Revenue Lifecycle Management System",
+      "createdAt": "2022-06-01T00:00:00Z",
+      "url": "https://conga.com/",
+      "description": "Developed unit test cases and packaged services as NuGet packages for microservices, improving system scalability and reliability. Built reusable services for better development efficiency.",
       "isFork": false,
       "languages": [
         {
-          "name": "Python",
-          "iconifyClass": "logos-python"
+          "name": ".NET Core",
+          "iconifyClass": "simple-icons:dotnet"
+        },
+        {
+          "name": "React.js",
+          "iconifyClass": "logos-react"
+        },
+        {
+          "name": "Azure",
+          "iconifyClass": "logos-azure"
         }
       ]
     },
     {
-      "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
-      "name": "masterPortfolio",
-      "createdAt": "2020-03-06T16:26:54Z",
-      "url": "https://github.com/ashutosh1919/masterPortfolio",
-      "description": "🔥 The Complete Customizable Software Developer Portfolio Template which lets you showcase your work and provides each and every detail about you as Software Developer.",
+      "id": "aurangabad-mahanagar-palika-scanner",
+      "name": "India's First Scanner-Based Info for Monuments",
+      "createdAt": "2022-01-01T00:00:00Z",
+      "url": "https://amc.aurangabadmahapalika.org/smart-scan/scanner",
+      "description": "Developed a scanner-based information system for monuments in Sambhajinagar, enabling smart access to historical data for the Aurangabad Mahanagar Palika (AMC Gov).",
       "isFork": false,
       "languages": [
         {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
+          "name": ".NET Core",
+          "iconifyClass": "simple-icons:dotnet"
         },
         {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
+          "name": "React.js",
+          "iconifyClass": "logos-react"
         },
         {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        },
-        {
-          "name": "Dockerfile",
-          "iconifyClass": "simple-icons:docker"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOG0_8uQ",
-      "name": "react-awesome-shapes",
-      "createdAt": "2022-02-11T14:50:20Z",
-      "url": "https://github.com/ashutosh1919/react-awesome-shapes",
-      "description": "🌀 Insert Awesome Shapes into Your React Site with Ease.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "Shell",
-          "iconifyClass": "simple-icons:shell"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        }
-      ]
-    },
-    {
-      "id": "R_kgDOGcPKSQ",
-      "name": "neuro-symbolic-sudoku-solver",
-      "createdAt": "2021-11-26T17:56:07Z",
-      "url": "https://github.com/ashutosh1919/neuro-symbolic-sudoku-solver",
-      "description": "⚙️ Solving sudoku using Deep Reinforcement learning in combination with powerful symbolic representations.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        }
-      ]
-    },
-    {
-      "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
-      "name": "react-liquidswipe",
-      "createdAt": "2021-01-01T08:31:51Z",
-      "url": "https://github.com/ashutosh1919/react-liquidswipe",
-      "description": "🚀 Smooth Liquid Swipe Animation to transition between different components.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
+          "name": "Azure",
+          "iconifyClass": "logos-azure"
         }
       ]
     }
