--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "masterPortfolio",
+  "name": "vivek_khadse_portfolio",
   "version": "0.1.0",
   "homepage": "https://ExternDev.github.io/masterPortfolio",
   "scripts": {
